fixed input spacing

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -31,7 +31,7 @@
 
 #modal-input input {
     width: 70%;
-    margin: 20px auto;
+    margin: 15px auto;
     padding: 18px 22px;
     border: 1px solid white;
     border-radius: 10px;
